--- a/packages/recipes_api/pubspec.yaml
+++ b/packages/recipes_api/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   equatable: ^2.0.3
   json_annotation: ^4.8.1
   meta: ^1.7.0
+  uuid: ^3.0.6
 
 dev_dependencies:
   build_runner: ^2.2.0
