--- a/packages/recipes_repository/pubspec.yaml
+++ b/packages/recipes_repository/pubspec.yaml
@@ -7,6 +7,8 @@ environment:
   sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
+  image_picker: ^1.0.7
+  mime: ^1.0.4
   recipes_api:
     path: ../recipes_api
 
